samples/_failures_safe/1761632138_61a762_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fdaa4c5.c: In function ‘main’:
./samples/SAFE/__tmp_8fdaa4c5.c:153:16: error: missing terminating " character
  153 |         printf("%
      |                ^~
./samples/SAFE/__tmp_8fdaa4c5.c:153:9: error: expected expression at end of input
  153 |         printf("%
      |         ^~~~~~
./samples/SAFE/__tmp_8fdaa4c5.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fdaa4c5.c:153:9: error: expected declaration or statement at end of input
